Major refactoring of architecture; some unit tests still failing